# CoPilot-Center-Bot

./: .breakpoints  ClosingTimes.csv  OpeningTimes.csv  globals.py  keep_alive.py  main.py  pyproject.toml  settings.json  utils.py
