[tool.poetry]
name = "repl_python3_CoPilotBot"
version = "0.1.0"
description = ""
authors = ["adam81501 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
pytz = "^2021.3"
schedule = "^1.1.0"
aiofiles = "^0.8.0"
pandas = "^1.3.5"
gspread = "^5.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
